<resources>
    <string name="app_name">Fitness&amp;ExerciseTracking</string>
    <string name="login_button">Login</string>
    <string name="login_textView">Email</string>
    <string name="password_textView">Password</string>
    <string name="register_textView">Register new account</string>
    <string name="title_activity_login">something</string>
    <string name="passwordConfirmation_textView">Password Confirmation</string>
    <string name="register_button">Register</string>
    <string name="logout_button">LogOut</string>
    <string name="goals_button">Goals</string>
    <string name="status_button">Status</string>
    <string name="exList_button">Exercise List</string>
    <string name="newRoutine_button">New Routine</string>
    <string name="myRoutines_button">My Routines</string>
    <string name="email_textView">Email</string>
    <string name="weight_textView">Weight</string>
    <string name="height_textView">Height</string>
    <string name="bmi_textview">BMI</string>
    <string name="totalWeight_textView">"Total Weight Lifted (Kg): "</string>
    <string name="totalTime_textView">"Total Time Exercised (m): "</string>
    <string name="lastExercised_textView">"Last Time Exercised: "</string>
    <string name="updatePersonal_textView">Update Personal Info</string>
    <string name="moreStats_textView">More Statistics</string>
    <string name="updateStatus_button">Update Status</string>
    <string name="exercerciseType_textView">Exercise type</string>
    <string name="exerciseMuscle_textView">Muscle Being Exercised</string>
    <string name="rep_textView">Number of Reps</string>
    <string name="time_textView">Exercise Time</string>
    <string name="generalInfo_textView">General Info</string>
    <string name="weightProg_textView">Weight Progression</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routDay_textView">Date:</string>
    <string name="routMuscle_textView">Muscle Targeted:</string>
    <string name="streetName_textView">Street Name</string>
    <string name="saveRoutine_button">Save Routine</string>
    <string name="cityName_textView">City</string>
    <string name="exerciseName_spinnerView">Exercise Name</string>
    <string name="number_editText">number</string>
    <string name="kilograms_editText">kilograms</string>
    <string name="seconds_editText">seconds</string>
    <string name="addExercise_floatingButton">Add Exercise</string>
    <string name="newRoutine_floatingButton">New Routine</string>
    <string name="centimeters_editTextHint">Centimeters</string>
</resources>