<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/button_main"
        android:onClick="onLogout"
        android:text="@string/logout_button"
        android:textColor="@color/light_matcha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/buttonGoals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/goals_button"
        android:textColor="@color/white"
        android:background="@drawable/button_main"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonStatus"
        app:layout_constraintTop_toTopOf="@+id/buttonStatus" />

    <Button
        android:id="@+id/buttonStatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/status_button"
        android:onClick="onStatus"
        android:textColor="@color/white"
        android:background="@drawable/button_main"
        app:layout_constraintBottom_toTopOf="@+id/buttonMyRoutines"
        app:layout_constraintEnd_toStartOf="@+id/buttonGoals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/buttonExList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:background="@drawable/button_main"
        android:text="@string/exList_button"
        android:onClick="onExerciseList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyRoutines" />

    <Button
        android:id="@+id/buttonNewExercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:background="@drawable/button_main"
        android:text="@string/newRoutine_button"
        android:onClick="onNewRoutine"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMyRoutines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMyRoutines"
        app:layout_constraintTop_toTopOf="@+id/buttonMyRoutines" />

    <Button
        android:id="@+id/buttonMyRoutines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:background="@drawable/button_main"
        android:text="@string/myRoutines_button"
        android:onClick="onMyRoutines"
        app:layout_constraintBottom_toTopOf="@+id/buttonExList"
        app:layout_constraintEnd_toStartOf="@+id/buttonNewExercise"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>