<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_main">

            <TextView
                android:id="@+id/textViewRoutineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/routDay_textView"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRoutineDateInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/routDay_textView"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewRoutineDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRoutineDate" />

            <TextView
                android:id="@+id/textViewRoutineMuscleFocus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/routMuscle_textView"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRoutineDate" />
            <TextView
                android:id="@+id/textViewRoutineMuscleFocusInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/exerciseMuscle_textView"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewRoutineMuscleFocus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRoutineMuscleFocus" />

            <TextView
                android:id="@+id/textViewRoutineExeType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/exercerciseType_textView"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRoutineMuscleFocus" />
            <TextView
                android:id="@+id/textViewRoutineExeTypeInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/exercerciseType_textView"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewRoutineExeType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRoutineExeType" />

            <TextView
                android:id="@+id/textViewRoutineLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/cityName_textView"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRoutineExeType" />
            <TextView
                android:id="@+id/textViewRoutineLocationInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/cityName_textView"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewRoutineLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRoutineLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>