<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRoutine">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="Exercise Name"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewReps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_textView"
            android:textColor="@color/green_5"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewWeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerName" />

        <EditText
            android:id="@+id/editTextNumberRespsInfo"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/green_5"
            android:textColorHint="@color/green_1"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="@+id/textViewReps"
            app:layout_constraintStart_toStartOf="@+id/textViewReps"
            app:layout_constraintTop_toBottomOf="@+id/textViewReps" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weight_textView"
            android:textColor="@color/green_5"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewReps"
            app:layout_constraintEnd_toStartOf="@+id/textViewTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewReps"
            app:layout_constraintTop_toTopOf="@+id/textViewReps" />

        <EditText
            android:id="@+id/editTextNumberWeightInfo"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/green_5"
            android:textColorHint="@color/green_1"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumberRespsInfo"
            app:layout_constraintEnd_toEndOf="@+id/textViewWeight"
            app:layout_constraintStart_toStartOf="@+id/textViewWeight"
            app:layout_constraintTop_toTopOf="@+id/editTextNumberRespsInfo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_textView"
            android:textColor="@color/green_5"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewReps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewWeight"
            app:layout_constraintTop_toTopOf="@+id/textViewReps" />

        <EditText
            android:id="@+id/editTextNumberTextInfo"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/green_5"
            android:textColorHint="@color/green_1"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumberRespsInfo"
            app:layout_constraintEnd_toEndOf="@+id/textViewTime"
            app:layout_constraintStart_toStartOf="@+id/textViewTime"
            app:layout_constraintTop_toTopOf="@+id/editTextNumberRespsInfo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_orange"
            android:clickable="true"
            android:onClick="onAddExercise"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberRespsInfo"
            app:srcCompat="@drawable/ic_baseline_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/saveRoutine_button"
        android:background="@drawable/button_main"
        android:padding="8dp"
        android:textColor="@color/white"
        android:onClick="onSaveRoutine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.533">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>